<resources>
    <string name="app_name">GitHub JavaPop</string>
    <string name="action_settings">Settings</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="TituloEspera">Carregando Repositories</string>
    <string name="MensagemEspera">Aguarde…</string>
    <string name="textviewrepositoryname">textViewRepositoryName</string>
    <string name="textviewdescription">textViewDescription</string>
    <string name="brito">Brito</string>
    <string name="wellington">Wellington</string>
    <string name="_640">640</string>
    <string name="_98">98</string>
    <string name="search">Search</string>

</resources>